[project]
name = "langgraph-mini"
version = "0.1.0"
description = "A lightweight, production-ready LangGraph agents"
readme = "README.md"
authors = [
    { name = "Suraj Bhardwaj", email = "suraj.unisiegen@gmail.com" }
]
requires-python = ">=3.11,<4.0"
license = { file = "LICENSE" }

keywords = ["langgraph", "langchain", "agents", "agentic-ai", "llm"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

dependencies = [
    "ddgs>=9.10.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]


[project.scripts]
langgraph-mini = "langgraph_mini.cli:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "build>=1.4.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "twine>=6.2.0",
]

[tool.uv.build-backend]
# Keep PyPI artifacts small: exclude large folders and non-package artifacts
source-exclude = [
    "/old_notebooks/**",
    "/notebooks/**",
    "/.github/**",
    "/dist/**",
    "/build/**",
    "*.ipynb",
    "*.pdf",
]

wheel-exclude = [
    "/old_notebooks/**",
    "/notebooks/**",
    "/.github/**",
    "/dist/**",
    "/build/**",
    "*.ipynb",
    "*.pdf",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401"]
